finished question and choices function

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         <p>Try to answer the following code-related questions within the time limit<br>
             Keep in mind that incorrect answers will penalize your score/time by ten seconds.
         </p>
-    </section>
-    <section>
         <button id="start-btn">Start Quiz</button>
     </section>
+    
+    <section id="choices">
+    </section>
 
+    <div id="footer-location">
 
+    </div>
+    <div id="scores-btn"></div>
     <script src="./assets/script.js"></script>
 </body>
 </html>
