local storage not working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="high-score-page" class="high-score-text">View high scores</a>
+        <a href="highscore.html" class="high-score-text">View high scores</a>
         <h5 id="timer"></h5>
     </nav>
 
