added second javascript page for highscore page

--- a/highscore.html
+++ b/highscore.html
@@ -14,6 +14,6 @@
     <button id="goBackBtn" onclick="window.location.href='index.html'">Go Back</button>
     <button id="clearBtn">Clear High Scores</button>
     <section>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/highScores.js"></script>
 </body>
 </html>
