finished code, styling, and commenting code

--- a/highscore.html
+++ b/highscore.html
@@ -7,12 +7,14 @@
     <title>High-Score page</title>
 </head>
 <body>
+    <!-- Section that shows name and score -->
     <section id="questions" class="main-body">
     <h1>High scores</h1>
     <ul id="scoreList"></ul>
 
-    <button id="goBackBtn" onclick="window.location.href='index.html'">Go Back</button>
-    <button id="clearBtn">Clear High Scores</button>
+    <!-- buttons to go to main page or clear local storage -->
+    <button id="goBackBtn" class="HSbtns" onclick="window.location.href='index.html'">Go Back</button>
+    <button id="clearBtn" class="HSbtns">Clear High Scores</button>
     <section>
     <script src="./assets/highScores.js"></script>
 </body>
