--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Challenge 4:Web APIs</title>
 </head>
 <body>
+    <!-- Timer and link to highscore page -->
     <nav>
         <a href="highscore.html" class="high-score-text">View high scores</a>
         <h5 id="timer"></h5>
     </nav>
 
+    <!-- Introduction area/Main content -->
     <section id="questions" class="main-body">
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit<br>
@@ -20,13 +22,15 @@
         <button id="start-btn">Start Quiz</button>
     </section>
     
+    <!-- placeholder to place answer choices -->
     <section id="choices">
     </section>
 
+    <!-- placeholder to place wrong/correct text -->
     <div id="footer-location">
 
     </div>
-    <div id="scores-btn"></div>
+
     <script src="./assets/script.js"></script>
 </body>
 </html>
